--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -68,7 +68,7 @@
   .children {
     border-left: 0;
     border-top: 4px solid #d9d6d0;
-    margin: 0;
+    margin: 2rem 0;
     padding: 2rem 0 0;
   }
 }
